--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
 <app-menu></app-menu>
 <!-- <app-rating (onRating)="handleRating($event)"></app-rating> -->
-
+<router-outlet></router-outlet>
 <div class="container">
-    <h2>In Theaters</h2>
-    <app-movies-list [movies]="moviesInTheaters"></app-movies-list>
-    <h2>Feature Releases</h2>
-    <app-movies-list [movies]="moviesFutureReleases"></app-movies-list>
+   <router-outlet></router-outlet>
 </div>
