--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,18 @@
 <mat-toolbar color="primary">
     <span>
-        <a mat-button>
+        <a routerLink="" mat-button>
             <mat-icon>local_movies</mat-icon> AngularMovies</a>
     </span>
+    <div>
+        <a routerLink="genres" mat-button>Genres</a>
+    </div>
+    <div>
+        <a routerLink="actors" mat-button>Actors</a>
+    </div>
+    <div>
+        <a routerLink="movietheaters" mat-button>Movies Theaters</a>
+    </div>
+    <div>
+        <a routerLink="movies/create" mat-button>Create Movie</a>
+    </div>
 </mat-toolbar>
